# rtrt_thesis

./: .gitignore  CMakeLists.txt  Doxyfile  README
paper/: .gitignore  cover.tex  thesis.bib  thesis.tex
rtrt/: cmdflags.h  format.sh  raytracer.cpp  raytracer.h  rtrt.cpp  rtrt.pro  world.cpp  world.h
rtrt/modules/: basiccamera.cpp  basiccamera.h  cmdflags.cpp  color.h  image.cpp  image.h  input.h  inputhandler.h  mat4.cpp  mat4.h  performancecounter.cpp  performancecounter.h  performancemonitor.cpp  performancemonitor.h  random.cpp  random.h  ray.cpp  ray.h  vec4.h  vec_func.cpp  vec_func.h  window.cpp  window.h  world.cpp  world.h
rtrt/modules/objects/: light.cpp  light.h  object.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h
rtrt/objects/: sphere.cpp  sphere.h
rtrt_test/: main.cpp  rtrt_test.pro  test_math_vec4.cpp  test_math_vec_func.cpp
rtrt_test-build-desktop-Desktop_Qt_4_7_3_for_GCC__Qt_SDK__Release/: Makefile
rtrt_test-build-desktop-Desktop_Qt_4_7_3_for_GCC__Qt_SDK__Release/rtrt_test.app/Contents/: Info.plist
rtrt_test-build-desktop-Desktop_Qt_4_7_3_for_GCC__Qt_SDK__Release/rtrt_test.app/Contents/MacOS/: rtrt_test
src/: .main.cpp.swp  CMakeLists.txt  globals.h  handlers.h  main.cpp
src/handlers/: close.cpp  close.h  key.cpp  key.h
src/math/: math.h  vec4.h  vec_func.cpp  vec_func.h
src/test/: CMakeLists.txt  test_math_vec4.cpp  test_math_vec_func.cpp
src/util/: gl.h
src/util/fps/: fps.cpp  fps.h
src/util/gl/: create_window.cpp  destroy_window.cpp  gl.h  init.cpp  init.h
src/util/handlers/: close.cpp  handlers.h  key.cpp
src/util/image/: image.cpp  image.h
src/util/math/: math.h  vec_func.cpp  vec_func.h
src/util/rt/: rt.cpp  rt.h
